2002-12-04  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

	* Begin configuration of octave using autotools.  plplot_octave.oct
	  builds and installs, but no other part of octave is done yet.
	  Note this and all future autotools work is being done on the MAIN
	  branch.

2002-12-03  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

	* With a lot of work required to work around state problems in the
	  repository, merged the AT branch into MAIN.  Welcome to the world
	  of autotools configuration on our MAIN branch!

2002-12-02  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

	* drivers/Makefile.am for AT branch: instead of using the
	  concatanation of all compiler flags for all dynamic drivers, apply
	  only those compiler flags that are appropriate to each dynamic
	  driver.  This makes a huge reduction in the command line when
	  gnome driver flags are involved, and probably saves significant
	  computer time as well when you avoid searching all those gnome
	  header directories for each dynamic driver.
	  
	* test/Makefile.am, etc for AT branch.  Bring test directory under
	  autotools control. Result is that plplot-test.sh runs in the
	  installed examples directory and gives identical results with the
	  MAIN branch (except in a few cases where there is version skew
	  between the examples since AT was branched from MAIN).

2002-12-01  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

	* Finish (nearly) all the dynamic driver builds for AT. Checked that
	  gnome, png, xfig, ntk all worked.  Also, package require Plplotter
	  (which accesses the tkwin_drv.so shared object) also works, and
	  -dev tkwin works (although it simply returns the usual error
	  message about no widget being available since this is not a
	  stand-alone driver).  As far as I know, the only driver that still
	  has errors under AT is tk.

2002-11-30  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

	* Finish AT libplplottcltk.so* build when itcl and tk are enabled.
