@@ -10,3 +10,7 @@ plplot_octave.cc
 plplot_octave.h
 plplot_octave.oct
 tmp_stub
+plplot_stub.m 
+missing_help
+massage
+plplot_octave_txt
