@@ -1,0 +1,67 @@
+# bindings/octave/demos/Makefile.am for PLplot
+###
+### Process this file with automake to produce Makefile.in
+###
+# Copyright (C) 2002 Alan W. Irwin
+# Copyright (C) 2002 Joao Cardoso
+# 
+#This file is part of PLplot.
+#
+#This file is free software; you can redistribute it and/or modify
+#it under the terms of the GNU Library General Public License as published by
+#the Free Software Foundation; version 2 of the License.
+#
+#This file is distributed in the hope that it will be useful,
+#but WITHOUT ANY WARRANTY; without even the implied warranty of
+#MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#GNU Library General Public License for more details.
+#
+#You should have received a copy of the GNU Library General Public License
+#along with the file; if not, write to the Free Software
+#Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307  USA
+
+if enable_octave
+
+examples_octavedir = ${prefix}/@DATA_DIR@/../examples/octave
+
+examples_octave_DATA = \
+	p1.m \
+	p10.m \
+	p11.m \
+	p12.m \
+	p13.m \
+	p14.m \
+	p15.m \
+	p16.m \
+	p19.m \
+	p2.m \
+	p20.m \
+	p3.m \
+	p4.m \
+	p5.m \
+	p6.m \
+	p7.m \
+	p8.m \
+	p9.m \
+	plplot_octave_demo.m \
+	x01c.m \
+	x02c.m \
+	x03c.m \
+	x04c.m \
+	x05c.m \
+	x06c.m \
+	x07c.m \
+	x08c.m \
+	x09c.m \
+	x10c.m \
+	x11c.m \
+	x12c.m \
+	x13c.m \
+	x14c.m \
+	x15c.m \
+	x16c.m \
+	x17c.m \
+	x18c.m \
+	x19c.m
+
+endif
